tests/snapshots/cli_insta__cli_insta-12.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - sort
    - "-f"
    - ">0"
    - 0.1.2-rc0
    - 0.1.2-rc1
---
success: true
exit_code: 0
----- stdout -----
---
versions: {}

----- stderr -----
