tests/snapshots/cli_insta__cli_insta-14.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - validate
    - a.b.c
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'a.b.c' for '<VERSION>': unexpected character 'a' while parsing major version number

For more information, try '--help'.
