tests/snapshots/cli_insta__cli_insta-16.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - validate
    - "-s"
    - 111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111.0.9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999
---
success: false
exit_code: 1
----- stdout -----
---
valid: false

----- stderr -----
