tests/snapshots/cli_insta__cli_insta-17.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - validate
    - 111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111.0.9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999
---
success: true
exit_code: 0
----- stdout -----
---
valid: true

----- stderr -----
