tests/snapshots/cli_insta__cli_insta-6.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - sort
    - 0.1.2-rc0
---
success: true
exit_code: 0
----- stdout -----
---
versions:
  0.1.2-rc0:
  - 0.1.2-rc0

----- stderr -----
